--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -10,7 +10,7 @@
 
     {% if paths.size == 0 %}
       <!-- index page -->
-      <span>{{ 'Posts' }}</span>
+      <span>{{ '文章' }}</span>
     {% else %}
 
       {% for item in paths %}
@@ -18,7 +18,7 @@
         {% if forloop.first %}
           {% unless page.layout == 'post' %}
           <span>
-            <a href="{{ '/' | relative_url }}">{{ 'Home' }}</a>
+            <a href="{{ '/' | relative_url }}">{{ '首页' }}</a>
           </span>
           {% endunless %}
 
