--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -10,7 +10,7 @@
 
     {% if paths.size == 0 %}
       <!-- index page -->
-      <span>{{ '文章' }}</span>
+      <span>{{ 'Posts' }}</span>
     {% else %}
 
       {% for item in paths %}
