初始化恢复

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -357,7 +357,6 @@ footer {
 }
 
 .post-content {
-  font-size: 1.08rem;
   line-height: 1.8;
   margin-top: 2rem;
   overflow-wrap: break-word;
@@ -425,6 +424,8 @@ footer {
 
   p {
     @include img(true);
+
+    font-size: 1.08rem;
   }
 
   ul {
@@ -904,6 +905,7 @@ $sidebar-display: "sidebar-display";
   border-radius: 0;
   padding: 0.18rem 0.3rem;
   color: var(--text-color);
+  font-size: 95%;
 
   &:focus {
     box-shadow: none;
@@ -1428,7 +1430,7 @@ $sidebar-display: "sidebar-display";
     }
   }
 
-  .post-content {
+  .post-content p {
     font-size: 1.03rem;
   }
 
