--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,15 +30,15 @@
 
   <ul class="w-100">
     <!-- home -->
-    <li class="nav-item{% if page.layout == 'home' %}{{ ' active' }}{% endif %}">
+    <li class="nav-item{% if page.layout == 'home' %}{{ " active" }}{% endif %}">
       <a href="{{ '/' | relative_url }}" class="nav-link">
         <i class="fa-fw fas fa-home ml-xl-3 mr-xl-3 unloaded"></i>
-        <span>{{ "首页" }}</span>
+        <span>{{ "HOME" }}</span>
       </a>
     </li>
     <!-- the real tabs -->
     {% for tab in site.tabs %}
-    <li class='nav-item{% if tab.url == page.url %}{{ " active" }}{% endif %}'>
+    <li class="nav-item{% if tab.url == page.url %}{{ " active" }}{% endif %}">
       <a href="{{ tab.url | relative_url }}" class="nav-link">
         <i class="fa-fw {{ tab.icon }} ml-xl-3 mr-xl-3 unloaded"></i>
         <span>{{ tab.title | upcase }}</span>
