--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -9,7 +9,7 @@
   --main-wrapper-bg: white;
   --main-border-color: #f3f3f3;
   --btn-border-color: #e9ecef;
-  --text-color: #34343c;
+  --text-color: #4a4a4a;
   --heading-color: black;
   --blockquote-border-color: #eee;
   --blockquote-text-color: #9a9a9a;
