增加百度统计

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -76,4 +76,14 @@
 
   {% include js-selector.html %}
 
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?4dff01b016fbd71615a3abf5d9c1f1be";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
+
 </head>
